fixing Css naming/organization
- dividing wrapper into navWrapper and pageWrapper so they dont overlap.
- created a button.css file for containing all buttons.
- updated div names to match navWrapper and pageWrapper.
- removed the 'view all' and 'create new' option buttons from createNewRV.html page.

--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -1,11 +1,3 @@
-/* Main page content
- * * * * * * * * * * * * * * * * * * * * * * * * * * */
-*
-{
-    box-sizing: border-box;
-    margin: 0;
-}
-
 body
 {
     font-family: Roboto, sans-serif;
@@ -26,41 +18,7 @@ body
     height: 100hv;
 }
 
-/* Navigation bar
- * * * * * * * * * * * * * * * * * * * * * * * * * * */
-nav
-{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 70px;
-}
-
-nav ul
-{
-    display: flex;
-}
-
-nav .logo
-{
-    margin-top: 5px;
-    margin-right: 5px;
-    margin-left: 5px;
-}
-
-/* Up size the Logo when user hovers over it */
-nav .logo:hover
-{
-    margin-right: 0;
-    margin-left: 0;
-}
-
-nav .logo:hover img
-{
-    width: 125px;
-}
-
-/* Navigation bar */
+/* Navigation bar container */
 .navContainer
 {
     height: 70px;
@@ -74,19 +32,41 @@ nav .logo:hover img
     justify-content: center;
 }
 
-/* Navigation bar content */
-.wrapper
+/* Navigation bar content*/
+nav
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 70px;
+}
+
+/* nav props */
+nav ul
+{
+    display: flex;
+}
+
+/* nav logo edits */
+nav .logo
+{
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+/* Navigation bar item display */
+.navWrapper
 {
     max-width: 1200px;
     margin: 0;
 
     /* Center the contents horizontally */
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
-/* Navigation bar text buttons / links */
+/* Navigation bar items */
 .navItems li
 {
     list-style: none;
@@ -124,6 +104,15 @@ a:hover
 /* * * * * * * * * * * * * * * * * * * * * * * * * * *
 end navigation */
 
+.pageWrapper
+{
+    max-width: 1200px;
+    margin: 0;
+
+    /* Center the contents horizontally */
+    display: flex;
+}
+
 /* BUTTON LIST ITEMS
 * * * * * * * * * * * * * * * * * * * * * * * */
 .buttonList
@@ -135,7 +124,7 @@ end navigation */
 .optionButtons li
 {
     background: #3E2719;
-    opacity: 0.9;
+    opacity: 0.6;
     display: block;
     margin: 20px;
     text-align: center;
@@ -239,7 +228,7 @@ END BUTTON LIST ITEMS */
 {
     margin-left: 50px;
     margin-right: 50px;
-    margin-top: 150px;
+    margin-top: 50px;
 }
 
 .listContent
